src/sass/_mixins.scss
@mixin image-2x($image, $width:"auto", $height:"auto") {
  @media (min-resolution: 144dpi) {
    /* on retina, use image that's scaled by 2 */
    background-image: url($image);
    background-size: $width $height;
  }
}

@mixin component {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
}

@mixin hole(){
  &__hole {
    display: flex;
    align-items: center;
    height: 100%;
  }
}

